# light-controller

./: README.md  deploy  main.py  pyproject.toml
lightcontroller/: app.py  plots.py  sun.py
test/: test_sunrise.py
