[tool.poetry]
name = "lightcontroller"
version = "0.1.0"
description = ""
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^21.12b0"
lifxlan = "^1.2.7"
gpiozero = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lightcontroller = "lightcontroller.app:main"
